--- a/prototype/package.json
+++ b/prototype/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "monaco-editor": "^0.23.0",
     "node-q": "^2.5.0",
-    "tabulator-tables": "^4.9.3"
+    "tabulator-tables": "^4.9.3",
+    "vue": "^3.1.1"
   }
 }
