--- a/prototype/package.json
+++ b/prototype/package.json
@@ -30,6 +30,7 @@
     "electron-packager": "^15.2.0"
   },
   "dependencies": {
+    "electron-json-storage": "^4.5.0",
     "monaco-editor": "^0.23.0",
     "node-q": "^2.5.0",
     "tabulator-tables": "^4.9.3",
