--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "monaco-editor": "^0.23.0",
     "node-q": "^2.5.0",
     "tabulator-tables": "^4.9.3",
+    "uuid": "^8.3.2",
     "vue": "^3.1.1"
   }
 }
