--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
   },
   "dependencies": {
     "electron-json-storage": "^4.5.0",
+    "element-ui": "^2.15.2",
     "monaco-editor": "^0.23.0",
     "node-q": "^2.5.0",
     "uuid": "^8.3.2",
-    "vue": "^3.1.1"
+    "vue": "^2.6.14"
   }
 }
