--- a/package.json
+++ b/package.json
@@ -33,17 +33,22 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
     "babel-loader": "^8.1.0",
-    "electron": "^8.2.2",
+    "css-loader": "^6.0.0",
+    "electron": "^13.1.2",
     "electron-builder": "^22.7.0",
-    "html-webpack-plugin": "^4.2.0",
-    "webpack": "^4.42.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.2",
+    "monaco-editor-webpack-plugin": "^3.0.1",
+    "style-loader": "^3.1.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "monaco-editor": "^0.23.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "webpack": "^5.44.0"
   }
 }
