--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@babel/runtime": "^7.14.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^6.0.0",
     "electron": "^13.1.2",
@@ -44,11 +46,15 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@fluentui/react": "^8.23.5",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "electron-json-storage": "^4.5.0",
     "monaco-editor": "^0.23.0",
+    "node-q": "^2.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "uuid": "^3.4.0",
     "webpack": "^5.44.0"
   }
 }
