--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
     "@babel/runtime": "^7.14.6",
+    "@types/electron-json-storage": "^4.5.0",
+    "@types/uuid": "^8.3.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^6.0.0",
     "electron": "^13.1.2",
