--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "pretty-quick": "^3.1.1"
   },
   "dependencies": {
+    "ag-grid-community": "^25.3.0",
+    "ag-grid-vue": "^25.3.0",
     "electron-json-storage": "^4.5.0",
     "element-ui": "^2.15.2",
     "monaco-editor": "^0.23.0",
