--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@fluentui/react": "^8.23.5",
+    "@reduxjs/toolkit": "^1.6.1",
     "@types/react": "^17.*",
     "@types/react-dom": "^17.*",
     "electron-json-storage": "^4.5.0",
@@ -57,6 +58,8 @@
     "react": "^17.*",
     "react-dom": "^17.*",
     "react-monaco-editor": "^0.43.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "uuid": "^3.4.0",
     "webpack": "^5.44.0"
   }
