--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "css-loader": "^6.0.0",
     "electron": "^13.1.2",
     "electron-builder": "^22.7.0",
+    "electron-devtools-installer": "^3.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
     "monaco-editor-webpack-plugin": "^4.1.1",
