--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/main.js",
   "scripts": {
     "dev:electron": "NODE_ENV=development webpack --config webpack.electron.config.js --mode development && electron .",
-    "dev:react": "NODE_ENV=development webpack-dev-server --config webpack.react.config.js --mode development",
+    "dev:react": "NODE_ENV=development webpack serve --config webpack.react.config.js --mode development",
     "build:electron": "NODE_ENV=production webpack --config webpack.electron.config.js --mode production",
     "build:react": "NODE_ENV=production webpack --config webpack.react.config.js --mode production",
     "build": "npm run build:electron && npm run build:react",
@@ -45,11 +45,11 @@
     "html-webpack-plugin": "^4.5.2",
     "monaco-editor-webpack-plugin": "^4.1.1",
     "style-loader": "^3.1.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-cli": "^4.*",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@fluentui/react": "^8.23.5",
+    "@fluentui/react": "^8.*",
     "@types/react": "^17.*",
     "@types/react-dom": "^17.*",
     "electron-json-storage": "^4.5.0",
@@ -59,6 +59,6 @@
     "react-dom": "^17.*",
     "react-monaco-editor": "^0.43.0",
     "uuid": "^3.4.0",
-    "webpack": "^5.44.0"
+    "webpack": "^5.*"
   }
 }
