--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "GUI for KDB/q database",
   "main": "./dist/main.js",
   "scripts": {
-    "dev:electron": "NODE_ENV=development webpack --config webpack.electron.config.js --mode development && electron .",
-    "dev:react": "NODE_ENV=development webpack serve --config webpack.react.config.js --mode development",
+    "dev:electron": "cross-env NODE_ENV=development webpack --config webpack.electron.config.js --mode development && electron .",
+    "dev:react": "cross-env NODE_ENV=development webpack serve --config webpack.react.config.js --mode development",
     "build:electron": "NODE_ENV=production webpack --config webpack.electron.config.js --mode production",
     "build:react": "NODE_ENV=production webpack --config webpack.react.config.js --mode production",
     "build": "npm run build:electron && npm run build:react",
@@ -43,6 +43,7 @@
     "@types/electron-json-storage": "^4.5.0",
     "@types/uuid": "^8.3.1",
     "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.0.0",
     "electron": "^13.1.2",
     "electron-builder": "^22.7.0",
