Move export functionality to export rather than excel
Open in excel seems to be more involved on original application so move our logic to export csv and also add txt format.

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@fluentui/react": "^8.*",
+    "@fluentui/react-file-type-icons": "^8.2.1",
     "@types/react": "^17.*",
     "@types/react-dom": "^17.*",
     "electron-dl": "^3.2.1",
