--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-dom": "^17.*",
     "react-monaco-editor": "^0.43.0",
     "uuid": "^3.4.0",
-    "webpack": "^5.*"
+    "webpack": "^5.*",
+    "xlsx": "^0.17.0"
   }
 }
