--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react": "^17.*",
     "react-dom": "^17.*",
     "react-monaco-editor": "^0.43.0",
+    "react-split": "^2.0.11",
     "uuid": "^3.4.0",
     "webpack": "^5.*",
     "xlsx": "^0.17.0"
