--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "office-ui-fabric-core": "^11.0.0",
     "react": "^17.*",
     "react-dom": "^17.*",
+    "react-hot-loader": "^4.13.0",
     "react-monaco-editor": "^0.43.0",
     "uuid": "^3.4.0",
     "webpack": "^5.*",
