--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,5 @@
     "@babel/preset-react",
     "@babel/preset-typescript"
   ],
-  "plugins": [["@babel/transform-runtime"], ["react-hot-loader/babel"]]
+  "plugins": [["@babel/transform-runtime"]]
 }
