--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
     "@babel/runtime": "^7.14.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/electron-json-storage": "^4.5.0",
     "@types/uuid": "^8.3.1",
     "babel-loader": "^8.1.0",
@@ -51,6 +52,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
     "monaco-editor-webpack-plugin": "^4.1.1",
+    "react-refresh": "^0.9.0",
     "style-loader": "^3.1.0",
     "webpack-cli": "^4.*",
     "webpack-dev-server": "^3.11.2"
