Get react-split working resizing editor and results windows

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,6 @@
     "outDir": "./dist",
     "strict": true ,
     "esModuleInterop": true,
+    "typeRoots": [ "./types", "./node_modules/@types"]
   }
 }
