--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "@fluentui/react": "^8.*",
     "@fluentui/react-file-type-icons": "^8.2.1",
+    "@react-hook/resize-observer": "^1.2.2",
     "@types/react": "^17.*",
     "@types/react-dom": "^17.*",
     "electron-dl": "^3.2.1",
