--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/preset-typescript": "^7.9.0",
     "@babel/runtime": "^7.14.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/crypto-js": "^4.0.2",
     "@types/electron-json-storage": "^4.5.0",
     "@types/uuid": "^8.3.1",
     "babel-loader": "^8.1.0",
@@ -63,9 +64,10 @@
     "@react-hook/resize-observer": "^1.2.2",
     "@types/react": "^17.*",
     "@types/react-dom": "^17.*",
+    "crypto-js": "^4.1.1",
     "electron-dl": "^3.2.1",
     "electron-json-storage": "^4.5.0",
-    "node-q": "^2.5.0",
+    "node-q": "https://github.com/OiNutter/node-q.git",
     "office-ui-fabric-core": "^11.0.0",
     "react": "^17.*",
     "react-dom": "^17.*",
