--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build:react": "NODE_ENV=production webpack --config webpack.react.config.js --mode production",
     "build": "npm run build:electron && npm run build:react",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "test:electron": "NODE_ENV=test webpack --config webpack.electron.config.js --mode production",
+    "test:react": "NODE_ENV=test webpack --config webpack.react.config.js --mode production",
+    "build:test": "npm run test:electron && npm run test:react",
+    "test": "cross-env NODE_ENV=test mocha --require ./tests/hooks.js ./tests"
   },
   "keywords": [],
   "contributors": [
@@ -52,7 +56,9 @@
     "electron-devtools-installer": "^3.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
+    "mocha": "^9.0.3",
     "monaco-editor-webpack-plugin": "^4.1.1",
+    "playwright": "^1.13.1",
     "react-refresh": "^0.9.0",
     "style-loader": "^3.1.0",
     "webpack-cli": "^4.*",
