--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,11 @@ jobs:
         with: 
           node-version: "16"
 
+      - name: Run Q Server
+        run: |
+          unzip tests/fixtures/q.zip
+          tests/fixtures/q -p 5001
+
       - name: Install dependencies
         run: |
           npm ci
