try export instead of set

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           unzip tests/fixtures/q.zip
           chmod a+x ./q/l32/q
-          set QHOME=$GITHUB_WORKSPACE/q
+          export QHOME=$GITHUB_WORKSPACE/q
           echo $GITHUB_WORKSPACE
           echo $QHOME
           ./q/l32/q -p 5001
