--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "mocha": "^9.0.3",
     "monaco-editor-webpack-plugin": "^4.1.1",
     "playwright": "^1.13.1",
+    "prettier": "^2.3.2",
     "react-refresh": "^0.9.0",
     "style-loader": "^3.1.0",
     "webpack-cli": "^4.*",
