--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,13 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "lib": [
-      "dom",
-      "es2015",
-      "es2016",
-      "es2017",
-      "es2019"
-    ],
+    "lib": ["dom", "es2015", "es2016", "es2017", "es2019"],
     "allowJs": true,
     "jsx": "react",
     "sourceMap": true,
     "outDir": "./dist",
-    "strict": true ,
+    "strict": true,
     "esModuleInterop": true,
-    "typeRoots": [ "./types", "./node_modules/@types"]
+    "typeRoots": ["./types", "./node_modules/@types"]
   }
 }
