--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kdb-studio-2",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "GUI for KDB/q database",
   "main": "./dist/main.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "build:react": "NODE_ENV=production webpack --config webpack.react.config.js --mode production",
     "build": "npm run build:electron && npm run build:react",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder",
+    "dist": "electron-builder -mwl",
     "test:electron": "NODE_ENV=test webpack --config webpack.electron.config.js --mode production",
     "test:react": "NODE_ENV=test webpack --config webpack.react.config.js --mode production",
     "build:test": "npm run test:electron && npm run test:react",
