--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
     needs: test
     runs-on: macos-latest
 
-    if: contains(github.ref, "main")
+    if: contains(github.ref, "release-and-update")
     steps:
       - name: "Build apps"
         run: npm run dist -- -publish
