--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "crypto-js": "^4.1.1",
     "electron-dl": "^3.2.1",
     "electron-json-storage": "^4.5.0",
+    "electron-updater": "^4.3.9",
     "node-q": "2.x.x",
     "office-ui-fabric-core": "^11.0.0",
     "react": "^17.*",
