--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,11 @@ jobs:
 
     if: contains(github.ref, 'release-and-update')
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2.4.0
+        with:
+          node-version: "16"
+
       - name: Install dependencies
         run: npm ci
       - name: "Build apps"
