Change how we pass in args to electron builder

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,4 +67,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: "Build apps"
-        run: npm run dist -- -publish
+        run: npm run dist -- -mwlp
