--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:react": "NODE_ENV=production webpack --config webpack.react.config.js --mode production",
     "build": "npm run build:electron && npm run build:react",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder -mwl",
+    "dist": "electron-builder",
     "test:electron": "NODE_ENV=test webpack --config webpack.electron.config.js --mode production",
     "test:react": "NODE_ENV=test webpack --config webpack.react.config.js --mode production",
     "build:test": "npm run test:electron && npm run test:react",
