--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,9 @@ jobs:
     needs: test
     runs-on: macos-latest
 
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     if: contains(github.ref, 'release-and-update')
     steps:
       - uses: actions/checkout@v2
@@ -67,4 +70,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: "Build apps"
-        run: npm run dist -- -mwlp
+        run: npm run dist -- -mwl
+      - name: "Publish to GitHub"
+        run: npm run publish
