--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "npm run build:electron && npm run build:react",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
+    "publish": "electron-builder --publish",
     "test:electron": "NODE_ENV=test webpack --config webpack.electron.config.js --mode production",
     "test:react": "NODE_ENV=test webpack --config webpack.react.config.js --mode production",
     "build:test": "npm run test:electron && npm run test:react",
