--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    if: contains(github.ref, 'release-and-update')
+    if: contains(github.ref, 'main')
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2.4.0
