--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
       "main"
     ],
     "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
       [
         "@semantic-release/git",
         {
