ci: archive kdb log for assessing test issues

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,12 @@ jobs:
       - name: Run tests
         run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm test
 
+      - name: Archive kdb log
+        uses: actions/upload-artifact@v2
+        with:
+          name: kdb-output.log
+          path: output.log
+
   release:
     needs: test
     runs-on: macos-latest
