--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
         run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm test
 
       - name: Archive kdb log
+        if: ${{ always() }}
         uses: actions/upload-artifact@v2
         with:
           name: kdb-output.log
