--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,12 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    services:
+      kdb:
+        image: kysely/kdbq
+        ports:
+          - 5001:5000
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -26,14 +32,14 @@ jobs:
         with:
           node-version: "16"
 
-      - name: Run Q Server
-        run: |
-          unzip tests/fixtures/q.zip
-          chmod a+x ./q/l32/q
-          export QHOME=$GITHUB_WORKSPACE/q
-          echo $GITHUB_WORKSPACE
-          echo $QHOME
-          nohup ./q/l32/q -p 5001 >output.log </dev/null &
+      #- name: Run Q Server
+      #  run: |
+      #    unzip tests/fixtures/q.zip
+      #    chmod a+x ./q/l32/q
+      #    export QHOME=$GITHUB_WORKSPACE/q
+      #    echo $GITHUB_WORKSPACE
+      #    echo $QHOME
+      #    nohup ./q/l32/q -p 5001 >output.log </dev/null &
 
       - name: Install dependencies
         run: |
@@ -53,12 +59,12 @@ jobs:
       - name: Run tests
         run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm test
 
-      - name: Archive kdb log
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v2
-        with:
-          name: kdb-output.log
-          path: output.log
+      #- name: Archive kdb log
+      #  if: ${{ always() }}
+      #  uses: actions/upload-artifact@v2
+      #  with:
+      #    name: kdb-output.log
+      #    path: output.log
 
   release:
     needs: test
