--- a/package.json
+++ b/package.json
@@ -54,6 +54,12 @@
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
       [
+        "@semantic-release/npm",
+        {
+          "npmPublish": false
+        }
+      ],
+      [
         "@semantic-release/git",
         {
           "assets": [
