ci: Always push assets until draft option added to semantic-release
Semantic-release currently has no option for creating draft releases  although there is an open PR for it, so until then we're forcing pushing the assets to the release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,4 +71,4 @@ jobs:
       - name: Create Release
         run: npx semantic-release
       - name: Compile Executables and Publish
-        run: npm run dist -- -mwl
+        run: npm run dist -- -mwl -p always
