--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kdb-studio-2",
-  "version": "1.1.0",
+  "version": "0.0.1",
   "description": "GUI for KDB/q database",
   "main": "./dist/main.js",
   "scripts": {
@@ -40,7 +40,8 @@
     "icon": "build/icons/icon.png",
     "publish": {
       "provider": "github",
-      "vPrefixedTagName": true
+      "vPrefixedTagName": true,
+      "releaseType": "release"
     },
     "snap": {
       "publish": "github"
