--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,10 @@ jobs:
   # This workflow contains a single job called "build"
   test:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     services:
       kdb:
@@ -48,7 +51,12 @@ jobs:
         run: npm run build:test
 
       - name: Run tests
+        if: matrix.os == 'ubuntu-latest'
         run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm test
+
+      - name: Run tests
+        if: matrix.os != 'ubuntu-latest'
+        run: npm test
 
   release:
     needs: test
