--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -30,13 +30,28 @@ jobs:
           node-version: "16"
 
       - name: Run Q Server
+        if: matrix.os == ubuntu-latest
         run: |
           unzip tests/fixtures/q.zip
           chmod a+x ./q/l32/q
           export QHOME=$GITHUB_WORKSPACE/q
-          echo $GITHUB_WORKSPACE
-          echo $QHOME
           nohup ./q/l32/q -p 5001 >output.log </dev/null &
+
+      - name: Run Q Server
+        if: matrix.os == macos-latest
+        run: |
+          unzip tests/fixtures/q.zip
+          chmod a+x ./q/m32/q
+          export QHOME=$GITHUB_WORKSPACE/q
+          nohup ./q/lm32/q -p 5001 >output.log </dev/null &
+
+      - name: Run Q Server
+        if: matrix.os == windows-latest
+        run: |
+          unzip tests/fixtures/q.zip
+          chmod a+x ./q/l32/q
+          export QHOME=$GITHUB_WORKSPACE/q
+          nohup ./q/l32/q -p 5001 >NUL
 
       - name: Install dependencies
         run: |
