--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           node-version: "16"
 
       - name: Run Q Server
-        if: matrix.os == ubuntu-latest
+        if: matrix.os == 'ubuntu-latest'
         run: |
           unzip tests/fixtures/q.zip
           chmod a+x ./q/l32/q
@@ -38,7 +38,7 @@ jobs:
           nohup ./q/l32/q -p 5001 >output.log </dev/null &
 
       - name: Run Q Server
-        if: matrix.os == macos-latest
+        if: matrix.os == 'macos-latest'
         run: |
           unzip tests/fixtures/q.zip
           chmod a+x ./q/m32/q
@@ -46,7 +46,7 @@ jobs:
           nohup ./q/lm32/q -p 5001 >output.log </dev/null &
 
       - name: Run Q Server
-        if: matrix.os == windows-latest
+        if: matrix.os == 'windows-latest'
         run: |
           unzip tests/fixtures/q.zip
           chmod a+x ./q/l32/q
