ci: make sure we change permissions on the right file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           unzip tests/fixtures/q.zip
-          chmod a+x ./q/l32/q
+          chmod a+x ./q/w32/q
           set QHOME=$GITHUB_WORKSPACE/q
           ./q/w32/q -p 5001 >NUL
 
