ci: try adding exe extension

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
           unzip tests/fixtures/q.zip
           chmod a+x q\w32\q
           set QHOME=$GITHUB_WORKSPACE/q
-          q\w32\q -p 5001 >NUL
+          q\w32\q.exe -p 5001 >NUL
 
       - name: Install dependencies
         run: |
