--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,8 @@ jobs:
       - name: Run Q Server (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: |
-          unzip tests/fixtures/q-linux.zip -d q
+          unzip tests/fixtures/q-linux.zip
+          mv q-linux q
           chmod a+x ./q/l32/q
           export QHOME=$GITHUB_WORKSPACE/q
           nohup ./q/l32/q -p 5001 >output.log </dev/null &
@@ -41,7 +42,8 @@ jobs:
       - name: Run Q Server (OSX)
         if: matrix.os == 'macos-latest'
         run: |
-          unzip tests/fixtures/q-macos.zip -d q
+          unzip tests/fixtures/q-macos.zip
+          mv q-macos q
           chmod a+x ./q/m64/q
           export QHOME=$GITHUB_WORKSPACE/q
           nohup ./q/m64/q -p 5001 >output.log </dev/null &
@@ -49,7 +51,8 @@ jobs:
       - name: Run Q Server (Windows)
         if: matrix.os == 'windows-latest'
         run: |
-          unzip tests/fixtures/q-windows.zip -d q
+          unzip tests/fixtures/q-windows.zip
+          mv q-windows q
           set QHOME=$GITHUB_WORKSPACE/q
           ./q/w32/q -p 5001 >NUL
 
