--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
     "publish": "electron-builder --publish always",
-    "test:electron": "NODE_ENV=test webpack --config webpack.electron.config.js --mode production",
-    "test:react": "NODE_ENV=test webpack --config webpack.react.config.js --mode production",
+    "test:electron": "cross-env NODE_ENV=test webpack --config webpack.electron.config.js --mode production",
+    "test:react": "cross-env NODE_ENV=test webpack --config webpack.react.config.js --mode production",
     "build:test": "npm run test:electron && npm run test:react",
     "test": "cross-env NODE_ENV=test mocha --require ./tests/hooks.js ./tests",
     "prepare": "husky install"
