--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,8 +62,9 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           unzip tests/fixtures/q-windows.zip
-          set QHOME=$GITHUB_WORKSPACE/q
-          Start-Job { & "$using:GITHUB_WORKSPACE\\w32\\q -p 5001" }
+          $QHOME=$GITHUB_WORKSPACE\q
+          $QHOME
+          Start-Job { param($curDir) & $curDir\q\w32\q.exe -p 5001" } -ArgumentList $GITHUB_WORKSPACE
           Get-Job
 
       - name: Install dependencies
