--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           unzip tests/fixtures/q-windows.zip
-          Start-Job { param($curDir) & $curDir\q\w32\q.exe -p 5001" } -ArgumentList $GITHUB_WORKSPACE
+          Start-Job { param($curDir) & $curDir\q\w32\q.exe -p 5001 } -ArgumentList $GITHUB_WORKSPACE
           Get-Job
 
       - name: Install dependencies
