ci: try and get some print out to check q is started correctly

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           unzip tests/fixtures/q-windows.zip
           Start-Job { param($curDir) & $curDir\q\w32\q.exe -p 5001 } -ArgumentList $GITHUB_WORKSPACE
-          Get-Job
+          Receive-Job -Id 1
 
       - name: Install dependencies
         run: |
