--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
   ],
   "license": "ISC",
   "build": {
+    "win": {
+      "asarUnpack": [
+        "**/*.node"
+      ]
+    },
     "files": [
       "dist/",
       "build/",
