ci: Tweaking asar config to get windows build working

--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "license": "ISC",
   "build": {
     "win": {
-      "asarUnpack": [
-        "**/*.node"
-      ]
+      "asar": {
+        "asarUnpack": [
+          "**/*.node"
+        ]
+      }
     },
     "files": [
       "dist/",
