ci: turn off asar for windows
Windows doesn't seem to like unpacking the node modules

--- a/package.json
+++ b/package.json
@@ -27,11 +27,7 @@
   "license": "ISC",
   "build": {
     "win": {
-      "asar": {
-        "asarUnpack": [
-          "**/*.node"
-        ]
-      }
+      "asar": false
     },
     "files": [
       "dist/",
