--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "license": "ISC",
   "build": {
     "win": {
-      "asar": false
+      "asarUnpack": [
+        "**/*.node"
+      ],
       "target": [
         {
           "target": "nsis"
