--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
       "publish": "github"
     },
     "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
     },
     "nsisWeb": {
       "oneClick": false,
