--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,6 +105,8 @@ jobs:
       - uses: actions/setup-node@v2.4.0
         with:
           node-version: "16"
+      - name: Install dependencies
+        run: npm ci
       - name: Create Release
         run: npx semantic-release
 
