ci: try and fix target substitution

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,4 +131,4 @@ jobs:
       - name: Build app
         run: npm run build
       - name: Compile Executables and Publish
-        run: npm run dist -- -${matrix.target} -p always
+        run: npm run dist -- -${{matrix.target}} -p always
