ci: Add msi installer for windows
Gives an installer for large enterprise without auto-update

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
         },
         {
           "target": "nsis-web"
+        },
+        {
+          "target": "msi"
         }
       ],
       "icon": "build/icons/icon.ico"
