--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ihull",
     "oinutter"
   ],
-  "license": "ISC",
+  "license": "Apache-2.0",
   "build": {
     "win": {
       "asarUnpack": [
